# constable

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs
tests/: 01-parse.rs  02-non-const-fn.rs  02-non-const-fn.stderr  03-non-bool-return-type.rs  03-non-bool-return-type.stderr  04-input-param-is-a-single-u8.rs  04-input-param-is-a-single-u8.stderr  tests.rs
